--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,10 @@
 .hide {
   display: none;
 }
-header {
+h1,
+p {
   text-align: center;
+  justify-content: center;
   padding: 20px;
   padding-top: 0px;
 }
