--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,8 @@ p {
   position: absolute;
 }
 .timer {
-  justify-content: right;
   float: right;
-  position: absolute;
+}
+.start-btn {
+  justify-content: center;
 }
